tests/parser_cases/invalid/import_leading_dot_module.ob0
(* INVALID: import clauses must start with an identifier, not a leading dot *)
MODULE Main;
IMPORT .Module;
BEGIN
END Main.
